# violinrs

./: .gitignore  Cargo.toml  README.md
block_component_macros/: Cargo.toml
block_component_macros/src/: lib.rs  statements.rs
block_component_macros/tests/: tests.rs
item_component_macros/: Cargo.toml
item_component_macros/src/: lib.rs  statements.rs
item_component_macros/tests/: tests.rs
js-cli/: Cargo.toml  main.js
js-cli/src/: eval.rs  lib.rs
src/: image.rs  lib.rs  localization.rs  logger.rs  pack.rs  recipe.rs  script.rs  template.rs  vio.rs
src-scripts/: main.js
src/block/: block_registry.rs  component.rs  mod.rs  permutation.rs  state.rs  utils.rs
src/image/: blend_modes.rs  mod.rs
src/item/: component.rs  item_registry.rs  mod.rs  utils.rs
src/pack/: mod.rs
src/vio/: mod.rs
src/vio_vanilla/: mod.rs  script_additions.rs
standalone_gen/: block.json
templates/: rp_manifest.json.jinja2
templates/block_serialization/: block.json.jinja2  perface_block_entry.json.jinja2
templates/item_serialization/: item_template.json.jinja2
templates/item_serialization/components/: hand_equipped.json.jinja2
templates/scripts/: command_setup.js.jinja2
viola/: Cargo.toml
viola/src/: lib.rs  viola_declaration.rs  viola_default.rs
