[package]
name = "violin_rs"
version = "0.2.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust-powered addon development framework for Minecraft Bedrock"
repository = "https://github.com/NaKeRNarolino/violet_crystal"
exclude = ["./violet_crystal_results"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
serde = { features = ["derive"], version = "1.0.203" }
log = "0.4.20"
simplelog = "0.12.1"
colored = "2.1.0"
syn-select = "0.3.0"
jsonxf = "1.1"
fs_extra = "1.3.0"
image = "0.25.5"
hsl = "0.1.1"
serde_json = "1.0.132"
derive_setters = "0.1.6"
item_component_macros = { path = "item_component_macros" }
block_component_macros = { path = "block_component_macros" }
viola = { path = "viola" }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
